--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="please_wait">Proszę czekać</string>
+    <string name="action_sign_up_anonymous">Zaloguj się Anonimowo</string>
 </resources>
