--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,14 @@
     <string name="action_sign_up">Zarejestruj się</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome! "</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
+
+<!--    <string name="invalid_username">Not a valid username</string>-->
+    <string name="invalid_username">Nieprawidłowy E-mail</string>
+<!--    <string name="invalid_password">Password must be >5 characters</string>-->
+    <string name="invalid_password">Hasło musi mieć więcej niż 5 znaków</string>
+    Logowanie nie powiodło się
+<!--    <string name="login_failed">"Login failed"</string>-->
+    <string name="login_failed">"Logowanie nie powiodło się"</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="please_wait">Proszę czekać</string>
